yo-common-config/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: yo-development
spec:
  mtls:
    mode: STRICT
