yo-common-config/authorization.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
    name: allow-nothing
    namespace: yo-development
spec: {}
